[gd_scene load_steps=3 format=2]

[ext_resource path="res://objects/2d/editor/VariableEdit.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/default.tres" type="DynamicFont" id=2]

[node name="VariableEdit" type="PanelContainer"]
margin_left = -2.0
margin_top = -1.0
margin_right = 299.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 294.0
margin_bottom = 34.0
custom_constants/separation = 4

[node name="Label" type="Label" parent="HBoxContainer"]
margin_right = 118.0
margin_bottom = 27.0
rect_min_size = Vector2( 118, 27 )
focus_mode = 2
custom_fonts/font = ExtResource( 2 )
autowrap = true

[node name="Button" type="Button" parent="HBoxContainer/Label"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Property" type="LineEdit" parent="HBoxContainer/Label"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
margin_left = 122.0
margin_right = 287.0
margin_bottom = 27.0
size_flags_horizontal = 3

[connection signal="gui_input" from="HBoxContainer/Label/Button" to="." method="_on_Button_gui_input"]
[connection signal="pressed" from="HBoxContainer/Label/Button" to="." method="_on_Button_pressed"]
[connection signal="focus_exited" from="HBoxContainer/Label/Property" to="." method="_on_Property_focus_exited"]
[connection signal="text_entered" from="HBoxContainer/Label/Property" to="." method="_on_Property_text_entered"]
[connection signal="text_changed" from="HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
